--- a/templates/student/batch/my_batches.html
+++ b/templates/student/batch/my_batches.html
@@ -862,7 +862,7 @@ Dashboard | My Courses
                             
                             tempImg.onerror = function() {
                                 img.classList.add('error');
-                                img.src = 'data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="200" height="200"%3E%3Crect fill="%23333" width="200" height="200"/%3E%3Ctext fill="%23666" font-size="18" x="50%25" y="50%25" text-anchor="middle" dy=".3em"%3EImage Error%3C/text%3E%3C/svg%3E';
+                                img.src = 'data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="200" height="200"%3E%3Crect fill="%23333" width="200" height="200"/%3E%3Ctext fill="%23666" font-size="18" x="50%25" y="50%25" text-anchor="middle" dy=".3em"%3EThumbnail Error%3C/text%3E%3C/svg%3E';
                                 
                                 // Remove skeleton loader
                                 const skeleton = img.previousElementSibling;
