Removed Nishta and Added Gallery Above the Pedagogy section

--- a/templates/home/team.html
+++ b/templates/home/team.html
@@ -102,7 +102,7 @@ The Angaari Aawam 🔥
                     </div>
                 </div>
 
-                <div class="base-card outreach-card" data-aos="fade-up" data-aos-delay="200">
+                <!-- <div class="base-card outreach-card" data-aos="fade-up" data-aos-delay="200">
                     <div class="circular-img-wrapper">
                         <img class="circular-img" src="{% static 'img/home/nistha.jpeg' %}" alt="Nistha Bhura">
                     </div>
@@ -115,7 +115,7 @@ The Angaari Aawam 🔥
 
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="base-card outreach-card" data-aos="fade-up" data-aos-delay="200">
                     <div class="circular-img-wrapper">
